@@ -422,6 +422,11 @@ surface_tridomain.m
 
 	 SURFACE_TRIDOMAIN  Triangular mesh to cover a planar or spherical domain
 	
+trihemisphere.m
+
+	 TRIHEMISPHERE  Triangular mesh on hemisphere with roughly uniformly
+	 distributed points
+	
 tri_squeeze.m
 
 	 TRI_SQUEEZE  Remove disconnected vertices from triangular mesh
